--- a/Books.ipynb
+++ b/Books.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "48ca906f",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import pymysql\n",
     "pymysql.install_as_MySQLdb()\n",
-    "from sqlalchemy import create_engine"
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy_utils import create_database, database_exists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "e3c65526",
    "metadata": {},
    "outputs": [],
@@ -25,12 +26,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "84ba778e",
    "metadata": {},
    "outputs": [],
    "source": [
     "engine = create_engine(connection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e4c7486f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "if database_exists(connection) == False: create_database(connection)\n",
+    "else: print('Already exists')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f3b8d2a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>author_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Stephen King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>F.Scott Fitgerald</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Jack London</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Jane Austen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Mary Shelley</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id        author_name\n",
+       "0   1       Stephen King\n",
+       "1   2  F.Scott Fitgerald\n",
+       "2   3        Jack London\n",
+       "3   4        Jane Austen\n",
+       "4   5       Mary Shelley"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('Data/authors.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6a56f9b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_sql('authors', engine, if_exists = 'replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "791db2f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('Data/books.csv')\n",
+    "df.to_sql('books', engine, if_exists = 'replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dbbd2d10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('Data/favorites.csv')\n",
+    "df.to_sql('favorites', engine, if_exists = 'replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "cba1a008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('Data/users.csv')\n",
+    "df.to_sql('users', engine, if_exists = 'replace')"
    ]
   },
   {
@@ -43,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "547ab667",
    "metadata": {},
    "outputs": [
@@ -99,7 +242,7 @@
        "2  The Great Gatsby        1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
